<resources>
    <string name="app_name">Timetable</string>
    <string name="lang_text">English</string>
    <string name="create_account">Create account</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log In</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="password_length_condition">Password must not be less than 6 characters</string>
    <string name="no_internet">No Internet connection</string>
    <string name="home">Home</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="teacher">Teacher</string>
    <string name="profile">Profile</string>
    <string name="student_s_timetable">Student\'s timetable</string>
    <string name="phone_number">Phone Number</string>
    <string name="edit_profile">Edit profile</string>
    <string name="edit_profile_image">Edit profile image</string>
    <string name="tvName">Full Name</string>
    <string name="student_added_to_db">Student added to remote database</string>
    <string name="groups">Groups</string>
    <string name="course">Courses:</string>
    <string name="no_lesson">On this day, there are no lessons</string>
    <string name="search">Search</string>
    <string name="search_title">Search</string>
    <string name="search_group_by_name">Search group by name</string>
    <string name="search_group">Search group</string>
    <string name="no_search_results_found">Searched group not found</string>
    <string name="add_lesson">Add lesson</string>
    <string name="lesson_name">Lesson name</string>
    <string name="room">Cabinet</string>
    <string name="day">Day</string>
    <string name="timetable">Timetable</string>
    <string name="teachers">Teachers</string>
    <string name="search_course">Search course</string>
    <string name="settings">Settings</string>
    <string name="language">Langauge</string>
    <string name="english">English</string>
    <string name="russion">Russian</string>

    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="select_start_time">Select start time</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_lesson">Edit lesson</string>
    <string name="empty_name">Name Is Empty</string>
    <string name="empty_room">Room Is Empty</string>
    <string name="empty_teacher">Teacher Is Empty</string>
    <string name="empty_start_time">Start Time Is Empty</string>
    <string name="empty_end_time">End Time Is Empty</string>
    <string name="empty_day_name">Day Name Is Empty</string>
    <string name="lang_title">Language</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="professor">Professor</string>
    <string name="android">Android</string>
    <string name="empty" />
    <string name="sub_group">Sub group</string>

    <string name="edit_lesson_status">Lesson Successfully edited</string>
    <string name="lesson_delete_status">Lesson Successfully deleted</string>
    <string name="add_lesson_status">Lesson Successfully added</string>
    <string name="lesson_type">Lesson type</string>
    <string name="group_name">010101</string>
    <string name="lesson_type_lab">Laboratory</string>
    <string name="lesson_type_lec">Lecture</string>

    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="subGroups">
        <item>Full group</item>
        <item>Sub group 1</item>
        <item>Sub group 2</item>
    </string-array>

    <string-array name="lessonType">
        <item>Lecture</item>
        <item>Laboratory</item>
    </string-array>

</resources>