<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_cancel"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="@dimen/margin_standard"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/edit_profile"
        android:textSize="@dimen/text_size_toolbar"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/btn_cancel"
        app:layout_constraintEnd_toStartOf="@id/btn_done"
        app:layout_constraintStart_toEndOf="@id/btn_cancel"
        app:layout_constraintTop_toTopOf="@id/btn_cancel" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_done"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="@dimen/margin_standard"
        android:src="@drawable/ic_done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_middle"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/userImage"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="@dimen/margin_standard"
            android:src="@drawable/user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_edit_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_standard"
            android:text="@string/edit_profile_image"
            android:textColor="@color/main_color"
            android:textSize="@dimen/text_size_standard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userImage" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/container_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_image">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_full_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_standard"
            android:layout_marginBottom="@dimen/margin_middle"
            android:hint="@string/full_name"
            app:startIconDrawable="@drawable/ic_account">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_full_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_standard"
            android:layout_marginBottom="@dimen/margin_middle"
            android:hint="@string/email_address"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_standard"
            android:layout_marginBottom="@dimen/margin_middle"
            android:hint="@string/phone_number"
            app:startIconDrawable="@drawable/ic_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>